Document the "exclusive" checkbox behaviour Strengthen the guidance around inline radios Make code snippets in content more visible (red text) Minor content fixes for form guidance

--- a/assets/_scss/base/_code.scss
+++ b/assets/_scss/base/_code.scss
@@ -7,6 +7,7 @@ code {
 
     background-color: $ds_colour__grey--lighter !important;
     line-height: line-height-on-grid($small-size);
+    color: $ds_colour__red;
 
     @include media-query(medium) {
         line-height: line-height-on-grid($small-size--medium, 2);
